update user结构